// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs should properly generate aggregate classes for model with lowercase name: AggregateExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { ExampleAvgAggregate } from \\"../outputs/ExampleAvgAggregate\\";
import { ExampleCountAggregate } from \\"../outputs/ExampleCountAggregate\\";
import { ExampleMaxAggregate } from \\"../outputs/ExampleMaxAggregate\\";
import { ExampleMinAggregate } from \\"../outputs/ExampleMinAggregate\\";
import { ExampleSumAggregate } from \\"../outputs/ExampleSumAggregate\\";

@ObjectType(\\"AggregateExample\\", {})
export class AggregateExample {
  @Field(() => ExampleCountAggregate, {
    nullable: true
  })
  _count!: ExampleCountAggregate | null;

  @Field(() => ExampleAvgAggregate, {
    nullable: true
  })
  _avg!: ExampleAvgAggregate | null;

  @Field(() => ExampleSumAggregate, {
    nullable: true
  })
  _sum!: ExampleSumAggregate | null;

  @Field(() => ExampleMinAggregate, {
    nullable: true
  })
  _min!: ExampleMinAggregate | null;

  @Field(() => ExampleMaxAggregate, {
    nullable: true
  })
  _max!: ExampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: CreateManyAndReturnExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"CreateManyAndReturnExample\\", {})
export class CreateManyAndReturnExample {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleAvgAggregate\\", {})
export class ExampleAvgAggregate {
  @Field(() => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleCountAggregate\\", {})
export class ExampleCountAggregate {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(() => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(() => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(() => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMaxAggregate\\", {})
export class ExampleMaxAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMinAggregate\\", {})
export class ExampleMinAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleSumAggregate\\", {})
export class ExampleSumAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateExample } from \\"./AggregateExample\\";
export { CreateManyAndReturnExample } from \\"./CreateManyAndReturnExample\\";
export { ExampleAvgAggregate } from \\"./ExampleAvgAggregate\\";
export { ExampleCountAggregate } from \\"./ExampleCountAggregate\\";
export { ExampleGroupBy } from \\"./ExampleGroupBy\\";
export { ExampleMaxAggregate } from \\"./ExampleMaxAggregate\\";
export { ExampleMinAggregate } from \\"./ExampleMinAggregate\\";
export { ExampleSumAggregate } from \\"./ExampleSumAggregate\\";
export { UpdateManyexampleAndReturnOutputType } from \\"./UpdateManyexampleAndReturnOutputType\\";
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: AggregateExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { ExampleAvgAggregate } from \\"../outputs/ExampleAvgAggregate\\";
import { ExampleCountAggregate } from \\"../outputs/ExampleCountAggregate\\";
import { ExampleMaxAggregate } from \\"../outputs/ExampleMaxAggregate\\";
import { ExampleMinAggregate } from \\"../outputs/ExampleMinAggregate\\";
import { ExampleSumAggregate } from \\"../outputs/ExampleSumAggregate\\";

@ObjectType(\\"AggregateExample\\", {})
export class AggregateExample {
  @Field(() => ExampleCountAggregate, {
    nullable: true
  })
  _count!: ExampleCountAggregate | null;

  @Field(() => ExampleAvgAggregate, {
    nullable: true
  })
  _avg!: ExampleAvgAggregate | null;

  @Field(() => ExampleSumAggregate, {
    nullable: true
  })
  _sum!: ExampleSumAggregate | null;

  @Field(() => ExampleMinAggregate, {
    nullable: true
  })
  _min!: ExampleMinAggregate | null;

  @Field(() => ExampleMaxAggregate, {
    nullable: true
  })
  _max!: ExampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: CreateManyAndReturnExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"CreateManyAndReturnExample\\", {})
export class CreateManyAndReturnExample {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleAvgAggregate\\", {})
export class ExampleAvgAggregate {
  @Field(() => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleCountAggregate\\", {})
export class ExampleCountAggregate {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(() => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(() => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(() => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMaxAggregate\\", {})
export class ExampleMaxAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMinAggregate\\", {})
export class ExampleMinAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleSumAggregate\\", {})
export class ExampleSumAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateExample } from \\"./AggregateExample\\";
export { CreateManyAndReturnExample } from \\"./CreateManyAndReturnExample\\";
export { ExampleAvgAggregate } from \\"./ExampleAvgAggregate\\";
export { ExampleCountAggregate } from \\"./ExampleCountAggregate\\";
export { ExampleGroupBy } from \\"./ExampleGroupBy\\";
export { ExampleMaxAggregate } from \\"./ExampleMaxAggregate\\";
export { ExampleMinAggregate } from \\"./ExampleMinAggregate\\";
export { ExampleSumAggregate } from \\"./ExampleSumAggregate\\";
export { UpdateManySampleAndReturnOutputType } from \\"./UpdateManySampleAndReturnOutputType\\";
"
`;

exports[`outputs should properly generate count classes for relation fields with args: FirstModelCount 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { FirstModelCountSecondModelsFieldArgs } from \\"./args/FirstModelCountSecondModelsFieldArgs\\";

@ObjectType(\\"FirstModelCount\\", {})
export class FirstModelCount {
  secondModelsField!: number;

  @Field(() => Int, {
    name: \\"secondModelsField\\",
    nullable: false,
    middleware: [
      async (ctx) => {
        return ctx.source.secondModelsField || 0;
      },
    ]
  })
  getSecondModelsField(@Parent() root: FirstModelCount, @Args() args: FirstModelCountSecondModelsFieldArgs): number {
    return root.secondModelsField;
  }
}
"
`;

exports[`outputs should properly generate count classes for relation fields with args: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateFirstModel } from \\"./AggregateFirstModel\\";
export { AggregateSecondModel } from \\"./AggregateSecondModel\\";
export { CreateManyAndReturnFirstModel } from \\"./CreateManyAndReturnFirstModel\\";
export { CreateManyAndReturnSecondModel } from \\"./CreateManyAndReturnSecondModel\\";
export { FirstModelAvgAggregate } from \\"./FirstModelAvgAggregate\\";
export { FirstModelCount } from \\"./FirstModelCount\\";
export { FirstModelCountAggregate } from \\"./FirstModelCountAggregate\\";
export { FirstModelGroupBy } from \\"./FirstModelGroupBy\\";
export { FirstModelMaxAggregate } from \\"./FirstModelMaxAggregate\\";
export { FirstModelMinAggregate } from \\"./FirstModelMinAggregate\\";
export { FirstModelSumAggregate } from \\"./FirstModelSumAggregate\\";
export { SecondModelAvgAggregate } from \\"./SecondModelAvgAggregate\\";
export { SecondModelCountAggregate } from \\"./SecondModelCountAggregate\\";
export { SecondModelGroupBy } from \\"./SecondModelGroupBy\\";
export { SecondModelMaxAggregate } from \\"./SecondModelMaxAggregate\\";
export { SecondModelMinAggregate } from \\"./SecondModelMinAggregate\\";
export { SecondModelSumAggregate } from \\"./SecondModelSumAggregate\\";
export { UpdateManyFirstModelAndReturnOutputType } from \\"./UpdateManyFirstModelAndReturnOutputType\\";
export { UpdateManySecondModelAndReturnOutputType } from \\"./UpdateManySecondModelAndReturnOutputType\\";
export * from \\"./args\\";
"
`;

exports[`outputs should properly generate count classes for relation fields: FirstModelCount 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { FirstModelCountSecondModelsFieldArgs } from \\"./args/FirstModelCountSecondModelsFieldArgs\\";

@ObjectType(\\"FirstModelCount\\", {})
export class FirstModelCount {
  secondModelsField!: number;

  @Field(() => Int, {
    name: \\"secondModelsField\\",
    nullable: false,
    middleware: [
      async (ctx) => {
        return ctx.source.secondModelsField || 0;
      },
    ]
  })
  getSecondModelsField(@Parent() root: FirstModelCount, @Args() args: FirstModelCountSecondModelsFieldArgs): number {
    return root.secondModelsField;
  }
}
"
`;

exports[`outputs should properly generate count classes for relation fields: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateFirstModel } from \\"./AggregateFirstModel\\";
export { AggregateSecondModel } from \\"./AggregateSecondModel\\";
export { CreateManyAndReturnFirstModel } from \\"./CreateManyAndReturnFirstModel\\";
export { CreateManyAndReturnSecondModel } from \\"./CreateManyAndReturnSecondModel\\";
export { FirstModelAvgAggregate } from \\"./FirstModelAvgAggregate\\";
export { FirstModelCount } from \\"./FirstModelCount\\";
export { FirstModelCountAggregate } from \\"./FirstModelCountAggregate\\";
export { FirstModelGroupBy } from \\"./FirstModelGroupBy\\";
export { FirstModelMaxAggregate } from \\"./FirstModelMaxAggregate\\";
export { FirstModelMinAggregate } from \\"./FirstModelMinAggregate\\";
export { FirstModelSumAggregate } from \\"./FirstModelSumAggregate\\";
export { SecondModelAvgAggregate } from \\"./SecondModelAvgAggregate\\";
export { SecondModelCountAggregate } from \\"./SecondModelCountAggregate\\";
export { SecondModelGroupBy } from \\"./SecondModelGroupBy\\";
export { SecondModelMaxAggregate } from \\"./SecondModelMaxAggregate\\";
export { SecondModelMinAggregate } from \\"./SecondModelMinAggregate\\";
export { SecondModelSumAggregate } from \\"./SecondModelSumAggregate\\";
export { UpdateManyFirstModelAndReturnOutputType } from \\"./UpdateManyFirstModelAndReturnOutputType\\";
export { UpdateManySecondModelAndReturnOutputType } from \\"./UpdateManySecondModelAndReturnOutputType\\";
export * from \\"./args\\";
"
`;

exports[`outputs should properly generate output type classes: AffectedRowsOutput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"AffectedRowsOutput\\", {})
export class AffectedRowsOutput {
  @Field(() => Int, {
    nullable: false
  })
  count!: number;
}
"
`;

exports[`outputs should properly generate output type classes: AggregateSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {})
export class AggregateSample {
  @Field(() => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(() => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(() => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(() => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(() => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate output type classes: CreateManyAndReturnSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"CreateManyAndReturnSample\\", {})
export class CreateManyAndReturnSample {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;

  @Field(() => [Int], {
    nullable: true
  })
  intArrayField!: number[] | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleAvgAggregate\\", {})
export class SampleAvgAggregate {
  @Field(() => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  intArrayField!: number | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleCountAggregate\\", {})
export class SampleCountAggregate {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(() => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(() => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(() => Int, {
    nullable: false
  })
  intArrayField!: number;

  @Field(() => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate output type classes: SampleGroupBy 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"SampleGroupBy\\", {})
export class SampleGroupBy {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;

  @Field(() => [Int], {
    nullable: true
  })
  intArrayField!: number[] | null;

  @Field(() => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(() => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(() => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(() => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(() => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleMaxAggregate\\", {})
export class SampleMaxAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleMinAggregate\\", {})
export class SampleMinAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(() => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleSumAggregate\\", {})
export class SampleSumAggregate {
  @Field(() => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(() => [Int], {
    nullable: true
  })
  intArrayField!: number[] | null;
}
"
`;

exports[`outputs should properly generate output type classes: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateSample } from \\"./AggregateSample\\";
export { CreateManyAndReturnSample } from \\"./CreateManyAndReturnSample\\";
export { SampleAvgAggregate } from \\"./SampleAvgAggregate\\";
export { SampleCountAggregate } from \\"./SampleCountAggregate\\";
export { SampleGroupBy } from \\"./SampleGroupBy\\";
export { SampleMaxAggregate } from \\"./SampleMaxAggregate\\";
export { SampleMinAggregate } from \\"./SampleMinAggregate\\";
export { SampleSumAggregate } from \\"./SampleSumAggregate\\";
export { UpdateManySampleAndReturnOutputType } from \\"./UpdateManySampleAndReturnOutputType\\";
"
`;

exports[`outputs when \`emitIsAbstract\` generator option is enabled should properly generate count object type class decorator options: FirstModelCount 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { FirstModelCountSecondModelsFieldArgs } from \\"./args/FirstModelCountSecondModelsFieldArgs\\";

@ObjectType(\\"FirstModelCount\\", {
  isAbstract: true
})
export class FirstModelCount {
  secondModelsField!: number;

  @Field(() => Int, {
    name: \\"secondModelsField\\",
    nullable: false,
    middleware: [
      async (ctx) => {
        return ctx.source.secondModelsField || 0;
      },
    ]
  })
  getSecondModelsField(@Parent() root: FirstModelCount, @Args() args: FirstModelCountSecondModelsFieldArgs): number {
    return root.secondModelsField;
  }
}
"
`;

exports[`outputs when customPrismaImportPath option is set should properly generate output type classes: AggregateSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../test/import\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {})
export class AggregateSample {
  @Field(() => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(() => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(() => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(() => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(() => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: AffectedRowsOutput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"AffectedRowsOutput\\", {
  simpleResolvers: true
})
export class AffectedRowsOutput {
  @Field(() => Int, {
    nullable: false
  })
  count!: number;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: AggregateSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {
  simpleResolvers: true
})
export class AggregateSample {
  @Field(() => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(() => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(() => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(() => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(() => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: SampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleAvgAggregate\\", {
  simpleResolvers: true
})
export class SampleAvgAggregate {
  @Field(() => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;
